Add login with Firebase

--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -22,4 +22,5 @@
 "email" = "Email";
 "verify-email" = "Verify email";
 "password" = "Password";
+"email-not-verify-error" = "Emails are different";
 
