Add driver list view

--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -24,3 +24,8 @@
 "password" = "Password";
 "email-not-verify-error" = "Emails are different";
 
+/* HomeView */
+"drivers-view" = "Drivers";
+"groups-view" = "Groups";
+"races-view" = "Races";
+"loading-text" = "Loading...";
