--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -57,3 +57,7 @@
 "show-next-races-text" = "Show next races";
 "hide-prev-races-text" = "Hide previous races";
 "show-prev-races-text" = "Show previous races";
+
+/* UserProfile */
+"sign-out" = "Sign out";
+"profile-view" = "Profile";
