add missing string

--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -83,6 +83,7 @@
 "clean-bet" = "Clean bet";
 "create-bet-button" = "Create bet";
 "create-bet-title" = "Create bet";
+"race-result-texts" = "Race result";
 
 /* Generic */
 "dismiss" = "Close";
