Bets can be created after the race

--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -95,6 +95,8 @@
 "create-bet-button" = "Create bet";
 "create-bet-title" = "Create bet";
 "race-result-texts" = "Race result";
+"You cannot create a bet after the Race" = "You cannot create a bet after the Race";
+"bet-not-valid" = "Bet is not valid";
 
 /* Generic */
 "dismiss" = "Close";
